# Hotpass

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  COMPLETION_SUMMARY.md  Contact Database.xlsx  Dockerfile  ENHANCEMENT_SUMMARY.md  GAP_ANALYSIS_30_10_25.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_WEB_UI.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  Next_Steps.md  Next_Steps_Log.md  PROJECT_UPGRADE.md  README.md  RELEASE_READINESS_REPORT.md  RELEASE_SUMMARY.md  ROADMAP.md  Reachout Database.xlsx  SACAA Flight Schools - Refined copy__CLEANED.xlsx  SCRATCH.md  SECURITY.md  TASK_COMMIT_MAPPING.md  UPGRADE.md  UPGRADE_B.md  catalog-info.yaml  coverage.json  hotpass  prefect.yaml  pyproject.toml  renovate.json  requirements-ci.txt  requirements.txt  scancode-sample.json  (+1 more)
.github/: CODEOWNERS  DVC-CI-INTEGRATION.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_improvement.md  task.md
.github/workflows/: arc-ephemeral-runner.yml  codeql.yml  commitlint.yml  copilot-setup-steps.yml  docker-cache.yml  docs.yml  labeler.yml  mypy-audit.yml  prefect-deployments.yml  process-data.yml  quality-gates.yml  release-drafter.yml  secret-scanning.yml  security-scan.yml  zap-baseline.yml
.hotpass/research_runs/: example-flight-school-20251031T005712Z.json  example-research-org-20251031T005745Z.json  qg-research-org-20251031T005149Z.json  qg-research-org-20251031T005454Z.json  qg-research-org-20251031T005706Z.json  unknown-entity-20251031T005149Z.json  unknown-entity-20251031T005454Z.json  unknown-entity-20251031T005706Z.json  unknown-entity-20251031T005712Z.json  unknown-entity-20251031T005745Z.json
.hypothesis/constants/: 045ef0d3197b6234  059e5ee0f660b0d5  086e7de4e8b8f2d7  0e00c30151714a2d  15cca8f715681aed  1af5d001b41afc26  1f46090cab16cf69  21b9d02dc8fbd386  266cc9ef092b5703  29024db56ebad04c  292e5d0766fc4e52  2bcbf298c763219c  2cd2ede82d80de6c  2e50619f262e1cfa  2fbc4f842ca70f88  307dcb61dff68e48  33e3b41fd1eb214c  35ce49e5a3bf7eb7  367046bb3da28010  37509b6bad427888  381326a0786f34bc  3e42276428631c19  3f2f88874f1a022c  3fe7b12ce6b8354a  40ac6382fcc22edc  41ce8c548fb5d200  44e7b975b6c87dbe  48481050f2a82063  4cb54d3f01f853ed  4f5ca2b85a671471  505dd5fb6563fca9  56a4a549e19a82b2  5a087b6d6bcb7727  5bfc2da4fb49ea4a  5d725d0dc227b863  60d364a577e2506c  60e55b4037733a27  648d596c75e8b9c9  65d4e1139dbe7646  6c1408b16131a439  (+85 more)
.reuse/: dep5
.trunk/: trunk.yaml
LICENSES/: Apache-2.0.txt
apps/web-ui/: .env  .gitignore  DESIGN_REVIEW.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TEST_PLAN.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
contracts/: hotpass-cli-contract.yaml
data/: optimized_data.xlsx  refined_data.xlsx  refined_data_test.xlsx
data/compliance/: README.md  verification-log.json
data/inventory/: asset-register.yaml
data_expectations/checkpoints/: contact_capture.json  contact_company_addresses.json  contact_company_cat.json  contact_company_contacts.json  reachout_contact_info.json  reachout_organisation.json  sacaa_cleaned.json
data_expectations/contact/: capture.json  company_addresses.json  company_cat.json  company_contacts.json
data_expectations/reachout/: contact_info.json  organisation.json
data_expectations/sacaa/: cleaned.json
data_expectations/suites/: contact_capture.json  contact_company_addresses.json  contact_company_cat.json  contact_company_contacts.json  reachout_contact_info.json  reachout_organisation.json  sacaa_cleaned.json
deploy/docker/: docker-compose.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING 2.md  CONTRIBUTING.md  README.md  agent-instructions.md  architecture-enterprise-parity.md  architecture-overview.md  conf.py  enhanced-pipeline-guide.md  enhancement-guide.md  expectation-catalogue.md  gap-analysis.md  implementation-guide.md  index.md  quick-start.md  roadmap.md  source-to-target-mapping.md  ssot-field-dictionary.md  style.md  upgrade-roadmap.md
docs/adr/: 0001-qa-tooling.md  0002-governance-automation.md  0003-data-contracts.md  0004-checkpoint-validation-strategy.md  0005-prefect-deployment-manifests.md  0006-mlflow-lifecycle-strategy.md  0006-telemetry-bootstrap.md  0007-cli-onboarding.md  index.md
docs/architecture/: cli-expansion-plan.md  fitness-functions.md  hotpass-architecture.dsl  repo-restructure-plan.md  (+1 more)
frontier-repo-template/: CHANGELOG.md  codemeta.json
ops/: migrate_profile.py  process_data.py  uv_sync_extras.sh
policy/: README.md  branch-protection.yaml  sbom.rego
prefect/: backfill.yaml  refinement.yaml
schemas/: contact_capture.schema.json  contact_company_addresses.schema.json  contact_company_cat.schema.json  contact_company_contacts.schema.json  reachout_contact_info.schema.json  reachout_organisation.schema.json  sacaa_cleaned.schema.json  ssot.schema.json
scripts/: __init__.py  benchmark_pipeline.py  migrate_profile.py  process_data.py  use-ssd-env.sh  uv_sync_extras.sh
tests/: __init__.py  _telemetry_stubs.py  conftest.py  test_acquisition_guardrails.py  test_agentic_orchestration.py  test_artifacts.py  test_benchmarks.py  test_benchmarks_unit.py  test_bootstrap.py  test_cli.py  test_cli_enhanced.py  test_column_mapping.py  test_compliance.py  test_compliance_verification.py  test_config.py  test_config_doctor.py  test_config_schema.py  test_contacts.py  test_dashboard.py  test_data_sources.py  test_deployment_specs.py  test_enhancements.py  test_enrichment.py  test_enrichment_async.py  test_enrichment_validators.py  test_entity_resolution.py  test_error_handling.py  test_evidence.py  test_formatting.py  test_geospatial.py  test_lineage.py  test_linkage.py  test_ml_tracking.py  test_observability.py  test_orchestration.py  test_orchestration_lineage.py  test_package_contracts.py  test_pipeline.py  test_pipeline_enhanced.py  test_pipeline_enhancements_exports.py  (+10 more)
tools/: profile_lint.py
(+515 files in other folders)
