[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotpass"
version = "0.1.0"
description = "Hotpass data refinement pipeline"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "LicenseRef-Proprietary"
dependencies = [
  "pandas>=2.3.3",
  "openpyxl>=3.1.5",
  "pandera>=0.26.1",
  "great-expectations>=1.8.0",
  "phonenumbers>=9.0.17",
  "rich>=14.2.0",
  "pyyaml>=6.0.3",
]

[project.optional-dependencies]
orchestration = [
  "prefect>=3.0.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
]

entity_resolution = [
  "splink>=3.9.0",
]

ml_scoring = [
  "scikit-learn>=1.5.0",
  "xgboost>=2.0.0",
]

enrichment = [
  "trafilatura>=1.12.0",
  "playwright>=1.47.0",
  "requests>=2.32.0",
]

geospatial = [
  "geopy>=2.4.0",
  "geopandas>=0.14.0",
]

compliance = [
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
]

dashboards = [
  "streamlit>=1.40.0",
]

caching = [
  "redis>=5.0.0",
]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "mypy>=1.18.2",
  "ruff>=0.14.2",
  "bandit>=1.8.6",
  "black>=25.9.0",
  "pre-commit>=4.3.0",
  "detect-secrets>=1.5.0",
  "types-PyYAML>=6.0.12",
]

docs = [
  "sphinx>=8.2.3",
  "myst-parser>=4.0.1",
  "sphinx-autodoc-typehints>=3.5.2",
  "furo>=2025.9.25",
  "linkify-it-py>=2.0.3",
]

[project.scripts]
hotpass = "hotpass.cli:main"
hotpass-enhanced = "hotpass.cli_enhanced:main"

[tool.ruff]
line-length = 100
extend-exclude = ["data"]
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--maxfail=1 --disable-warnings --cov=src --cov-report=term-missing"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
namespace_packages = true
packages = ["hotpass"]
strict = false
mypy_path = ["src"]
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/hotpass/optimize.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
