[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotpass"
version = "0.1.0"
description = "Hotpass data refinement pipeline"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "LicenseRef-Proprietary"
dependencies = [
  "pandas>=2.3.3",
  "openpyxl>=3.1.5",
  "pandera>=0.26.1",
  "great-expectations>=1.8.0",
  "phonenumbers>=9.0.17",
  "polars>=1.12.0",
  "duckdb>=1.1.2",
  "frictionless>=5.17.0",
  "rich>=14.2.0",
  "pyyaml>=6.0.3",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "prefect>=3.0.0",
  "requests>=2.32.0",
  "trafilatura>=1.12.0",
  "types-PyYAML>=6.0.12",
  "detect-secrets>=1.5.0",
  "nameparser>=1.1.3",
  "python-stdnum>=1.19",
  "pyarrow>=17.0.0",
]

[project.optional-dependencies]
orchestration = [
  "prefect>=3.0.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
]

entity_resolution = ["splink>=3.9.0"]

ml_scoring = ["scikit-learn>=1.5.0", "xgboost>=2.0.0"]

enrichment = ["trafilatura>=1.12.0", "playwright>=1.47.0", "requests>=2.32.0"]

geospatial = ["geopy>=2.4.0", "geopandas>=0.14.0"]

compliance = ["presidio-analyzer>=2.2.0", "presidio-anonymizer>=2.2.0"]

dashboards = ["streamlit>=1.40.0"]

caching = ["redis>=5.0.0"]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "mypy>=1.18.2",
  "ruff>=0.14.2",
  "bandit>=1.8.6",
  "black>=25.9.0",
  "pre-commit>=4.3.0",
  "detect-secrets>=1.5.0",
  "types-PyYAML>=6.0.12",
  "cyclonedx-bom>=4.4.0",
  "mutmut>=2.4.0",
  "semgrep>=1.78.0",
]

docs = [
  "sphinx>=8.2.3",
  "myst-parser>=4.0.1",
  "sphinx-autodoc-typehints>=3.5.2",
  "furo>=2025.9.25",
  "linkify-it-py>=2.0.3",
]

[project.scripts]
hotpass = "hotpass.cli:main"
hotpass-enhanced = "hotpass.cli_enhanced:main"

[tool.ruff]
line-length = 100
extend-exclude = ["data"]
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--maxfail=1 --disable-warnings --cov=src --cov-report=term-missing"
pythonpath = ["src"]
markers = ["accessibility: accessibility semantics checks"]

[tool.mypy]
python_version = "3.13"
namespace_packages = true
packages = ["hotpass"]
strict = false
mypy_path = ["src"]
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/hotpass/optimize.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.mutmut]
paths_to_mutate = ["src/hotpass/quality.py", "src/hotpass/pipeline_enhanced.py"]
tests_dir = [
  "tests/test_quality.py",
  "tests/test_quality_report.py",
  "tests/test_pipeline_enhanced.py",
  "tests/contracts",
]
also_copy = ["src/hotpass"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.data-files]
"hotpass/schemas" = ["schemas/*.json"]
"hotpass/data_expectations" = ["data_expectations/*.json"]
"hotpass/data_expectations/reachout" = ["data_expectations/reachout/*.json"]
"hotpass/data_expectations/contact" = ["data_expectations/contact/*.json"]
"hotpass/data_expectations/sacaa" = ["data_expectations/sacaa/*.json"]

[dependency-groups]
dev = ["types-requests>=2.32.4.20250913"]
